--- a/pricing.html
+++ b/pricing.html
@@ -327,10 +327,11 @@
                         <li class="flex gap-3"><i data-lucide="check" class="w-5 h-5 text-blue-400"></i> Voice Assistants</li>
                         <li class="flex gap-3"><i data-lucide="check" class="w-5 h-5 text-blue-400"></i> Workflow Automation</li>
                     </ul>
-
-                    <button class="w-full py-4 border border-blue-500/50 text-blue-400 font-bold rounded-2xl hover:bg-blue-500 hover:text-white transition-all">
-                        <a href="contact.html">Contact Sales</a>
-                    </button>
+	            <a href="contact.html"> 
+                        <button class="w-full py-4 border border-blue-500/50 text-blue-400 font-bold rounded-2xl hover:bg-blue-500 hover:text-white transition-all">
+                            Contact Sales
+                        </button>
+		    </a>
                 </div>
 
             </div>
