--- a/tc.html
+++ b/tc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <meta name="description" content="Review Evoxa’s Terms & Conditions covering service usage, billing, website setup, hosting, business email, and AI automation agreements.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms & Conditions | Evoxa</title>
