--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <meta name="description" content="Explore Evoxa’s transparent pricing for website setup, hosting, business email, and AI automation. Simple plans built for small businesses and growing teams.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing | Evoxa</title>
