--- a/ps.html
+++ b/ps.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
+    <meta name="description" content="Read Evoxa’s Privacy Policy to understand how we handle data, security, and user information across our website, automation systems, and AI solutions.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | Evoxa</title>
