--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     </p>
                     <ul class="space-y-2 mb-6">
                         <li class="flex items-center gap-2 text-xs text-gray-300">
-                            <i data-lucide="check-circle" class="w-4 h-4 text-green-400"></i> Gemini-Powered Code
+                            <i data-lucide="check-circle" class="w-4 h-4 text-green-400"></i> Premium & Professional Aesthetic
                         </li>
                         <li class="flex items-center gap-2 text-xs text-gray-300">
                             <i data-lucide="check-circle" class="w-4 h-4 text-green-400"></i> Mobile Responsive
@@ -219,7 +219,7 @@
                     </div>
                     <h3 class="font-display text-xl font-bold mb-3 text-white">Managed Hosting</h3>
                     <p class="text-gray-400 text-sm leading-relaxed mb-6">
-                        Forget downtime. Our managed hosting ensures your site is fast, secure, and always online. We handle updates and technical maintenance.
+                        Forget downtime. Our managed hosting ensures your site is fast, secure, and always online. We handle updates* and technical maintenance.
                     </p>
                     <ul class="space-y-2 mb-6">
                         <li class="flex items-center gap-2 text-xs text-gray-300">
@@ -229,6 +229,7 @@
                             <i data-lucide="check-circle" class="w-4 h-4 text-blue-400"></i> SSL Security Included
                         </li>
                     </ul>
+		    <h6 class="font-display text-xs mb-3 text-gray-400">* see <a href="tc.html">terms and conditions</a></h6>
                 </div>
 
                 <!-- Service 3 -->
