--- a/tc.html
+++ b/tc.html
@@ -137,7 +137,7 @@
         <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
             <a href="index.html" class="flex items-center gap-2 group">
                 <div class="w-8 h-8 bg-evoxa-primary rounded-lg flex items-center justify-center text-white font-bold group-hover:shadow-[0_0_20px_rgba(124,58,237,0.5)] transition-all">
-                    E
+                    <img src="Evoxa - Logo.jpg" alt="Evoxa Logo" class="w-full h-full object-contain">
                 </div>
                 <span class="font-heading font-bold text-xl tracking-tight">Evoxa</span>
             </a>
@@ -382,7 +382,7 @@
             <div class="flex flex-col md:flex-row justify-between gap-12 mb-12">
                 <div class="md:w-1/3">
                     <a href="index.html" class="flex items-center gap-2 mb-6">
-                        <div class="w-8 h-8 bg-evoxa-panel border border-white/10 rounded-lg flex items-center justify-center text-white font-bold">E</div>
+                        <div class="w-8 h-8 bg-evoxa-panel border border-white/10 rounded-lg flex items-center justify-center text-white font-bold"><img src="Evoxa - Logo.jpg" alt="Evoxa Logo" class="w-full h-full object-contain"></div>
                         <span class="font-heading font-bold text-xl">Evoxa</span>
                     </a>
                     <p class="text-gray-400 max-w-sm mb-6">
