--- a/pricing.html
+++ b/pricing.html
@@ -187,6 +187,7 @@
     		<select id="currency-selector" class="bg-white/5 border border-white/10 text-gray-300 text-sm rounded-lg px-3 py-2 cursor-pointer hover:border-evoxa-primary/50 transition-all">
         	    <option value="GBP" selected>United Kingdom (GBP)</option>
        		    <option value="INR">India (INR)</option>
+		    <option value="USD">United States of America (USD)</option>
         	    <!-- Add more currencies later -->
     	        </select>
 	    </div>
@@ -268,7 +269,7 @@
                         <li class="flex gap-3"><i data-lucide="check" class="w-5 h-5 text-evoxa-primary"></i> Managed Cloud Hosting</li>
                         <li class="flex gap-3"><i data-lucide="check" class="w-5 h-5 text-evoxa-primary"></i> Enterprise SSL Security</li>
                     </ul>
-		    <a id="choose-plan-link" href="https://buy.stripe.com/00w9AU7HmciC8ETfwO6g800" target="_blank" class="block">
+		    <a id="choose-plan-link" href="https://buy.stripe.com/bJe6oI3r61DYf3hesK6g805" target="_blank" class="block">
                         <button class="w-full py-4 bg-white text-black font-bold rounded-2xl hover:bg-evoxa-glow transition-all shadow-lg">
                             Choose Plan
                         </button>
@@ -299,7 +300,7 @@
                         <li class="flex gap-3"><i data-lucide="check" class="w-5 h-5 text-pink-500"></i> 30GB Secure Storage</li>
                         <li class="flex gap-3"><i data-lucide="check" class="w-5 h-5 text-pink-500"></i> AI Assistant in Gmail</li>
                     </ul>
-		    <a id="add-email-link" href="https://buy.stripe.com/5kQeVed1GciC3kz0BU6g801" target="_blank" class="block">
+		    <a id="add-email-link" href="https://buy.stripe.com/00w9AU7Hm0zU1cracu6g806" target="_blank" class="block">
                         <button class="w-full py-4 border border-pink-500/50 text-pink-400 font-bold rounded-2xl hover:bg-pink-500 hover:text-white transition-all">
                             Add Email
                         </button>
@@ -630,12 +631,16 @@
 	// Replace these with your real Stripe links
 	const LINKS = {
 	    GBP: {
-	        addEmail: "https://buy.stripe.com/5kQeVed1GciC3kz0BU6g801",
-	        choosePlan: "https://buy.stripe.com/00w9AU7HmciC8ETfwO6g800"
+	        addEmail: "https://buy.stripe.com/00w9AU7Hm0zU1cracu6g806",
+	        choosePlan: "https://buy.stripe.com/bJe6oI3r61DYf3hesK6g805"
 	    },
 	    INR: {
-	        addEmail: "https://buy.stripe.com/4gMdRad1G1DY9IX4Sa6g802",
-	        choosePlan: "https://buy.stripe.com/eVq3cw8LqgySaN1fwO6g803"
+	        addEmail: "https://buy.stripe.com/3cI5kEbXC3M69IXdoG6g808",
+	        choosePlan: "https://buy.stripe.com/eVqeVef9OgyS9IX70i6g807"
+	    },
+	    USD: {
+	        addEmail: "https://buy.stripe.com/14AbJ2f9OfuOcV9acu6g80a",
+	        choosePlan: "https://buy.stripe.com/9B68wQ7HmgySdZdckC6g809"
 	    }
 	};
 
@@ -656,9 +661,14 @@
 	        emailUser: "£15"
 	    },
 	    INR: {
-	        coreSetup: "₹10000",
-	        coreHosting: "+ ₹6250/mo hosting",
+	        coreSetup: "₹6250",
+	        coreHosting: "+ ₹5000/mo hosting",
 	        emailUser: "₹2000"
+	    },
+	    USD: {
+	        coreSetup: "$80",
+	        coreHosting: "+ $50/mo hosting",
+	        emailUser: "$25"
 	    }
 	};
 
@@ -692,6 +702,11 @@
                 currencySelector.value = "INR";
                 updateLinks("INR");
                 updatePrices("INR");
+            }
+	    if (data.country === "US") {
+                currencySelector.value = "USD";
+                updateLinks("USD");
+                updatePrices("USD");
             }
         })
         .catch(() => {
